...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".uilayer.ingredientstorage.AddEditViewIngredientFragment">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:text="SAVE AND EXIT"
            app:layout_constraintBottom_toBottomOf="parent"
...
            android:hint="Recipe Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipe_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/preparationTimeTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="Preparation Time (in mins.)"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipeNameTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/preparation_time_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
...
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="Servings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preparationTimeTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/servings_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
...
            android:hint="Category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/servingsTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/category_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/commentsTextLayout"
...
            android:hint="Comments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comments_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Ingredients"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/list_of_ingredients"
            app:layout_constraintStart_toStartOf="@+id/list_of_ingredients"
            app:layout_constraintTop_toBottomOf="@+id/commentsTextLayout" />

        <ImageView
            android:id="@+id/recipe_image_view"
            android:layout_width="match_parent"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_of_ingredients" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_ingredient_to_recipe"
            style="@style/FabButton"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:clickable="true"
...
            app:fabCustomSize="40dp"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_ingredient_from_recipe"
            style="@style/RecipeButtons"
            android:layout_width="40dp"
            android:layout_height="41dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="5dp"
            android:clickable="true"
...
