<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:gravity="center"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:text="Sort recipes list by"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/recipe_sort_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:paddingLeft="15dp"
            android:text="Title"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/recipe_sort_preparation_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:paddingLeft="15dp"
            android:text="Preparation Time"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/recipe_sort_servings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:paddingLeft="15dp"
            android:text="Servings"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/recipe_sort_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:paddingLeft="15dp"
            android:text="Recipe category"
            android:textAlignment="viewStart"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>