...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/heart_icon_background">


    <ListView
        android:id="@+id/recipelistview"
        style="@style/ListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ListView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sort_button"
            style="@style/FabButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="91dp"
...
